# aidax-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  compose.yaml  example.env  flake.nix  pyproject.toml
app/: __init__.py  ollama_client.py
app/models/: conversations.py
app/skills/: manager.py
